--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CreateObject\" />
+    <Folder Include="UpdateObject\" />
+  </ItemGroup>
+
 </Project>
