Create and Update Deserts

--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CreateObject\" />
-    <Folder Include="UpdateObject\" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
