--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,17 @@ FodyWeavers.xsd
 /Manager/obj/Manager.csproj.nuget.g.props
 /Manager/obj/project.assets.json
 /Manager/obj/project.nuget.cache
+/Contracts/obj/Contracts.csproj.nuget.dgspec.json
+/Contracts/obj/Contracts.csproj.nuget.g.props
+/Contracts/obj/project.assets.json
+/Domain/obj/Domain.csproj.nuget.dgspec.json
+/Contracts/obj/Debug/net6.0/Contracts.assets.cache
+/Domain/obj/Debug/net6.0/Domain.assets.cache
+/Domain/obj/project.nuget.cache
+/Contracts/obj/project.nuget.cache
+/Manager/obj/Manager.csproj.nuget.dgspec.json
+/Domain/obj/project.assets.json
+/Manager/obj/project.assets.json
+/Domain/obj/Domain.csproj.nuget.g.props
+/Manager/obj/project.nuget.cache
+/Manager/obj/Manager.csproj.nuget.g.props
