--- a/.gitignore
+++ b/.gitignore
@@ -383,6 +383,5 @@ FodyWeavers.xsd
 /Manager/obj/Manager.csproj.nuget.g.props
 /Manager/obj/project.assets.json
 /Manager/obj/project.nuget.cache
-/Contracts/obj/Debug/net6.0/Contracts.assets.cache
-/Domain/obj/Debug/net6.0/Domain.assets.cache
+/Manager/obj/Debug/net6.0/Manager.csproj.AssemblyReference.cache
 /Manager/obj/Debug/net6.0/Manager.csproj.AssemblyReference.cache
